Fixed alignment of news header and added a css class for future news headers. Condensed author/date to one line for news items (May be problematic in the future). Increased spacing between news items. Lastly truncated titles and author names so that titles are a max of two lines and author date's don't exceed one. This was done by simply truncating characters at a certain point which may not be ideal

--- a/website/static/website/css/news.css
+++ b/website/static/website/css/news.css
@@ -2,6 +2,7 @@
     float: left;
     padding-right: 5px;
     padding-bottom: 0px;
+    vertical-align: top;
 }
 
 .news_content{
@@ -18,6 +19,7 @@
     padding-top: 0px;
     padding-left: 20px;
     padding-bottom: 0px;
+    margin: 0 auto;
     line-height: 100%;
 }
 
@@ -30,9 +32,14 @@
 }
 
 .news_header{
-    padding-bottom: 0px
+    padding-bottom: 0px;
 }
 
 .news_body{
-    padding-bottom: 10px
+    padding-bottom: 20px
+}
+
+.news-type-label {
+    text-align: left;
+    margin: 0 auto;
 }
